--- a/201808/vue-demo/demo23.html
+++ b/201808/vue-demo/demo23.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<title>v-bind:class</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
 </head>
-
 <body>
 	<div id="app">
-
+		<ul>
+			<li v-for='n of 5' ref="liTag" is="liTag" v-bind:key="n">{{n}}</li>
+		</ul>
 	</div>
 	<script type="text/javascript">
-		Vue.component("child", {
-			template: "<div>This is component</div>"
+		Vue.component("liTag",{
+			template:"<li>This is a li tag.</li>"
 		});
 		var app = new Vue({
-			el: "#app",
-			data: {}
+			el:"#app",
+			data:{
+				show:true,
+				classD:'d'
+			}
 		});
 	</script>
 </body>
-
 </html>
