--- a/201808/vue-demo/demo10.html
+++ b/201808/vue-demo/demo10.html
@@ -13,7 +13,9 @@
 	</div>
 	<script type="text/javascript">
 		Vue.component("child", {
-			template: "<div>This is component</div>"
+			template: `<div>
+					   		<p>This is component</p>
+					   </div>`
 		});
 		var app = new Vue({
 			el: "#app",
