修改模板添加class

--- a/201808/vue-demo/demo10.html
+++ b/201808/vue-demo/demo10.html
@@ -13,7 +13,7 @@
 	</div>
 	<script type="text/javascript">
 		Vue.component("child", {
-			template: `<div>
+			template: `<div class="child">
 					   		<p>This is component</p>
 					   </div>`
 		});
