--- a/201810/module/demo1/index.html
+++ b/201810/module/demo1/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<h1>module</h1>
-	<script type="module" src="./js/index.js" charset="utf-8"></script>
+	<script type="module" src="./js/main.js" charset="utf-8"></script>
 </body>
 </html>
