--- a/201810/module/demo2/index.html
+++ b/201810/module/demo2/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 	<h1>module</h1>
-	<script src="./js/index.js" charset="utf-8"></script>
+	<script src="./js/main.js" charset="utf-8"></script>
 </body>
 </html>
