html-webpack-plugin

--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
@@ -27,5 +27,5 @@
         </ul>
         <div id="welcome"></div>
     </div>
-<script type="text/javascript" src="entry.js?bcd8f985600e53cec56d"></script><script type="text/javascript" src="list.js?bcd8f985600e53cec56d"></script></body>
+</body>
 </html>
