--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -24,6 +24,11 @@
                 <p class="feature-name">严选折上折</p>
                 <p class="feature-des">购物享全场额外折扣</p>
             </li>
+            <!-- <li class="feature-item">
+                <i class="icon icon03"></i>
+                <p class="feature-name">严选折上折</p>
+                <p class="feature-des">购物享全场额外折扣</p>
+            </li> -->
         </ul>
         <div id="welcome"></div>
     </div>
