图片模块化处理

--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -30,6 +30,8 @@
                 <p class="feature-des">购物享全场额外折扣</p>
             </li> -->
         </ul>
+        <div id="headImg1"></div>
+        <div id="headImg2"></div>
         <div id="welcome"></div>
     </div>
 </body>
