--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -31,6 +31,7 @@
             </li> -->
         </ul>
         <div id="headImg1"></div>
+        <img src="./images/head30.jpg" alt="">
         <div id="headImg2"></div>
         <div id="welcome"></div>
     </div>
