--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app">
+        <div id="header">This is a header.</div>
         <ul class="feature-list">
             <li class="feature-item">
                 <i class="icon icon01"></i>
