--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://apps.bdimg.com/libs/jquery/1.8.1/jquery.js"></script>
 </head>
+
 <body>
     <div id="app">
-        <div id="header">This is a header.</div>
+        <div id="header">This is a header.<span id='version'></span></div>
         <ul class="feature-list">
             <li class="feature-item">
                 <i class="icon icon01"></i>
@@ -37,4 +40,5 @@
         <div id="welcome"></div>
     </div>
 </body>
+
 </html>
