提取公共模块

--- a/201810/webpack/demo1/src/index.html
+++ b/201810/webpack/demo1/src/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://apps.bdimg.com/libs/jquery/1.8.1/jquery.js"></script>
+    <style>
+        [v-cloak] {
+            display: none !important;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" v-clock>
+        <ul>
+            <li>{{name}}</li>
+            <li>{{age}}</li>
+            <li>{{sex}}</li>
+        </ul>
         <div id="header">This is a header.<span id='version'></span></div>
         <ul class="feature-list">
             <li class="feature-item">
