--- a/201810/webpack/demo4/index.html
+++ b/201810/webpack/demo4/index.html
@@ -8,6 +8,7 @@
     <script src="dist/bundle.js"></script>
 </head>
 <body>
-    123
+    <div id="div1">Hello Transform</div>
+    <div id="div2">你好。这是一个 DIV 元素。</div>
 </body>
 </html>
