extract-text-webpack-plugin

--- a/201810/webpack/demo4/index.html
+++ b/201810/webpack/demo4/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="dist/bundle.js"></script>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
     <div id="div1">Hello Transform</div>
