--- a/201810/webpack/demo6/src/index.html
+++ b/201810/webpack/demo6/src/index.html
@@ -17,8 +17,8 @@
     <div id="img1"></div>
     <div id="img2"></div>
     <hr>
-    <img id="images1" width="200" height="200" src="./images/head10.jpg" alt="">
-    <img id="images2" width="200" height="200" src="./images/head20.jpg" alt="">
+    <img class="images" src="./images/head10.jpg" alt="">
+    <img class="images" src="./images/head20.jpg" alt="">
 </body>
 
 </html>
