--- a/201810/webpack/demo6/src/index.html
+++ b/201810/webpack/demo6/src/index.html
@@ -17,8 +17,8 @@
 	<div id="img2"></div>
 	<div id="img1"></div>
 	<hr>
-	<img class="images" src="./images/head20.jpg" alt="">
-	<img class="images" src="./images/head10.jpg" alt="">
+	<img id="images1" class="images" src="./images/head20.jpg?v=1" data-src="./asset/data-src33.jpeg" alt="1">
+	<img id="images2" class="images" src="./images/head10.jpg?b=2" data-src="./asset/data-src9.jpg" alt="2">
 </body>
 
 </html>
