--- a/201810/xntq-demo/dest/index.html
+++ b/201810/xntq-demo/dest/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.1/jquery.js"></script>
     <link rel="stylesheet" href="https://act-vip-ssl.xunlei.com/pc/vip/2018/xntq_v2/dest/css/style.css">
-</head>
+<link href="css/style.css?75908344a80aaa5ab84e" rel="stylesheet"></head>
 
 <body>
     <div id="app">
@@ -15,6 +15,6 @@
         <goods-area v-bind:goods-list-arr="goodsListArr" v-bind:is-vip-xuser="isVipXuser" seat="1"></goods-area>
         <goods-area v-bind:goods-list-arr="goodsListArr" v-bind:is-vip-xuser="isVipXuser" seat="2"></goods-area>
     </div>
-</body>
+<script type="text/javascript" src="js/index.min.js?75908344a80aaa5ab84e"></script></body>
 
 </html>
