--- a/201810/webpack-xx-demo/img-module/src/index.html
+++ b/201810/webpack-xx-demo/img-module/src/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        li{
+            float: left;
+            list-style: none;    
+        }
+    </style>
 </head>
 <body>
     <h1>图片处理</h1>
-    <div id="app1"></div>
-    <div id="app2"></div>
-    <div id="app3"></div>
-    <div id="app4"></div>
+    <ul>
+        <li id="app1"></li>
+        <li id="app2"></li>
+        <li id="app3"></li>
+        <li id="app4"></li>
+    </ul>
 </body>
 </html>
