--- a/201810/webpack-xx-demo/css-module/index.html
+++ b/201810/webpack-xx-demo/css-module/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS处理</title>
-<link href="dist/css/style.css?177bdfb11be9f5b03473" rel="stylesheet"></head>
+<link href="dist/./css/style.css?6676a8f31fbfc01c96c9" rel="stylesheet"></head>
 <body>
     <div class="css"></div>
     <div class="sass"></div>
     <div class="less"></div>
     <div class="stylus"></div>
-<script type="text/javascript" src="dist/js/index.js?177bdfb11be9f5b03473"></script></body>
+<script type="text/javascript" src="dist/js/index.js?6676a8f31fbfc01c96c9"></script></body>
 </html>
