带图片压缩功能的构建

--- a/201810/webpack-xx-demo/img-module/index.html
+++ b/201810/webpack-xx-demo/img-module/index.html
@@ -20,5 +20,5 @@
         <li id="app3"></li>
         <li id="app4"></li>
     </ul>
-<script type="text/javascript" src="dist/js/index.js?1c8523491eaac3ab5bba"></script></body>
+<script type="text/javascript" src="dist/js/index.min.js?628b0c8d5d48f4382c05"></script></body>
 </html>
