--- a/201810/webpack-xx-demo/js-module/index.html
+++ b/201810/webpack-xx-demo/js-module/index.html
@@ -9,5 +9,5 @@
 <body>
     <h1>Builder构建第一个应用</h1>
     <div>当前系统时间：<span id="timer"></span></div>
-<script type="text/javascript" src="dist/js/index.js?7d84f828b240e6cf3341"></script></body>
+<script type="text/javascript" src="dist/js/index.min.js?28508442f3e83cc9e3e9"></script></body>
 </html>
