--- a/201811/emoji/index.html
+++ b/201811/emoji/index.html
@@ -16,5 +16,5 @@
     <div id="app">
         
     </div>
-<script type="text/javascript" src="dist/js/index.min.js?a9c11bacf3b8623fe83f"></script></body>
+<script type="text/javascript" src="dist/js/index.js?95b1bdf0b7ae4dc2909d"></script></body>
 </html>
